<resources>
    <string name="app_name">MoneyConverter</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="set_the_exhange_rate_below">Set the exchange rate below</string>
    <string name="takaisin">Back</string>
    <string name="set_exhange_rate_and_currency_names">Set exchange rate and currency names</string>
    <string name="give_name_for_currency_to_convert">Give name for currency to convert</string>
    <string name="give_name_for_converted_currency">Give name for converted currency</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="_0">0</string>
    <string name="_0_">0</string>
    <string name="settings">Settings</string>
    <string name="convert">Convert</string>
</resources>